[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
chrono     = { version = "0.4", features = ["serde"] }
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"