[package]
name = "tpms-tracker"
version = "0.1.0"
edition = "2021"
description = "Vehicle tracker that consumes tpms-sniffer JSON-line output"

[[bin]]
name = "tpms-tracker"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
chrono     = { version = "0.4", features = ["serde"] }
clap       = { version = "4", features = ["derive"] }
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
