[package]
name = "tpms-tracker"
version = { workspace = true }
edition = { workspace = true }
description = "Vehicle tracker that consumes tpms-sniffer JSON-line output"

[[bin]]
name = "tpms-tracker"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
chrono     = { workspace = true }
clap       = { workspace = true }
flate2     = "1"
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { version = "1", features = ["v4", "serde"] }