[package]
name = "tpms-tracker"
version = { workspace = true }
edition = { workspace = true }
description = "Vehicle tracker that consumes tpms-sniffer JSON-line output"

[[bin]]
name = "tpms-tracker"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
axum       = { version = "0.8", features = ["json"] }
chrono     = { workspace = true }
clap       = { workspace = true }
env_logger = "0.11"
flate2     = "1"
log        = "0.4"
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid       = { version = "1", features = ["v4", "serde"] }